--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@ input{
 button{
     cursor: pointer;
     border: 1px solid #888888;
-    background: beige;
+    background: #888888;
     color: white;
     padding: 8px;
 }
