changed footer position and added photo

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,10 +12,11 @@
 <body>
     <div class="main-content">
     {{>header}}
-     <p>created by {{name}}</p>
-     {{>footer}}
+     <p>This site was create by {{name}}. It Uses data from Darksky and mapbax.com</p>
+     <img class="portrait" src="/img/ms photo.jpg">
     </div>
-    
+         {{>footer}}
+
 
 </body>
 
