--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,9 +10,10 @@
 </head>
 
 <body>
+    <div class="main-content">
     {{>header}}
-    <h1>{{title}}</h1>
     <p>{{message}}</p>
+    </div>
     {{>footer}}
 </body>
 
